# libmemwalk

./: .cirrus.yml  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  libmw.h  mw_regions.c  mw_subwalk.c
src/apple/: mw_os.c  mw_os.h
src/freebsd/: mw_os.c
src/linux/: mw_os.c  mw_os.h
test/: CMakeLists.txt  mw.c  tests.h
test/memwalk/: CMakeLists.txt  memwalk.c
test/memwalk_remote/: CMakeLists.txt  memwalk.c
test/mmap/: CMakeLists.txt  mmap.c
test/mprotect/: CMakeLists.txt  mprotect.c
test/regions/: CMakeLists.txt  add_diff_perms.c  add_less_perms.c  add_more_perms.c  add_same_perms.c  regions.c  regions.h
